@@ -1,3 +1,8 @@
+2005-04-28  Davide Viti  <zinosat@tiscali.it>
+
+	* Wordlists aren't built anymore at each run. 
+	 "build_wls.sh" triggers a complete rebuild of all wls
+	
 2005-04-19  Davide Viti  <zinosat@tiscali.it>
 
 	* New version of the spellchecker has just been committed: the
